--- a/_sass/www_theme/layouts/_header.scss
+++ b/_sass/www_theme/layouts/_header.scss
@@ -22,18 +22,13 @@ $transition: 0.3s;
   justify-content: space-between;
   flex-wrap: wrap;
 
-  // margin-bottom: $spacing-unit/2;
-
-  * {
-    margin: 0 $spacing-unit/2;
-  }
-
   @extend %clearfix;
 }
 
 #navbar-logo {
   flex: auto;
   height: $logo-size-large;
+  margin: 0 $spacing-unit/2;
 }
 
 #navbar-title {
@@ -41,6 +36,7 @@ $transition: 0.3s;
   flex-grow: 10 !important;
   font-size: $title-large;
   text-align: center;
+  margin: 0 $spacing-unit/2;
 }
 
 #navbar-menu-icon {
@@ -50,21 +46,22 @@ $transition: 0.3s;
   height: $logo-size-large/4;
   cursor: pointer;
   z-index: 200;
+  margin: 0 $spacing-unit/2;
 
   display: none;
 }
 
 #bar1, #bar2, #bar3 {
-  width: 35px;
-  height: 5px;
+  width: 30px;
+  height: 4px;
   background-color: #333;
   margin: 6px 0;
   transition: 0.4s;
 }
 
 .change #bar1 {
-  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-  transform: rotate(-45deg) translate(-9px, 6px);
+  -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+  transform: rotate(-45deg) translate(-6px, 6px);
 }
 
 .change #bar2 {opacity: 0;}
@@ -80,6 +77,7 @@ $transition: 0.3s;
   flex-grow: 1;
   display: flex;
   justify-content: center;
+  margin: 0 $spacing-unit/2;
 
   .a {
     flex: none;
